Made some small code cleanup changes